--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -42,7 +42,7 @@
                                 <p>{{post.contenido}}</p>
                                 <p ng-show="post.img!='null'">
                                  <a href="{{post.img}}" alt="imagen">   
-                                     <img class="imgpost" data-ng-src="{{post.img}}" Post">
+                                     <img class="img-responsive" data-ng-src="{{post.img}}" Post">
                                 </a>
                                 </p>
                             </div>
