panel de administracion y formulario

--- a/wusick/app/views/partials/jades/admin-index.html
+++ b/wusick/app/views/partials/jades/admin-index.html
@@ -17,6 +17,7 @@
 					<th class="estado">Estado&nbsp;<a ng-click="sort_by('estado')"><i class="icon-sort"></i></a></th>
 					<th class="estado">Editar&nbsp;<i class="icon-sort"></i></th>
 					<th class="estado">Eliminar&nbsp;<i class="icon-sort"></i></th>
+					<th class="estado">Posts&nbsp;<i class="icon-sort"></i></th>
 				</tr>
 			</thead>
 			<tfoot>
@@ -27,7 +28,7 @@
 					<td>{{item.idUsuario}}</td>
 					<td>{{item.nombre}}</td>
 					<td>{{item.email}}</td>
-					<td>{{item.fecha_alta}}</td>
+					<td>{{item.fecha_alta | date:'longDate'}}</td>
 
 					
 					<td ng-if="item.Tipo_usuarios_idTipo_usuarios == 1">
@@ -56,13 +57,16 @@
 					<td class="text-center">
 						<a data-toggle="modal" data-target="#myModal">
 							<!--  img src='../../../images/edit.png', alt='Editar' data={{item.idUsuario}} name={{item.nombre}} ng-click='modificarUsuario($event)' / -->
-							<img src='../../../images/edit.png', alt='Editar' data={{item.idUsuario}} name={{item.nombre}} ng-click='modificarUsuario($event)' />
+							<img src='../../../images/edit.png', alt='Editar' data={{item.idUsuario}} name={{item.nombre}} ng-click='modificarUsuario($event)' width="28" height="28"/>
 						</a>
 					</td>
 					<td class="text-center">
 						<a href ng-click='borrarUsuario($event)' >
 							<img src='../../../images/delete.png', alt='Eliminar' data={{item.idUsuario}} name={{item.nombre}}/>
 						</a>
+					</td>
+					<td>
+					<a><span class="glyphicon glyphicon-envelope"></span></a>
 					</td>
 				</tr>
 				     
@@ -83,112 +87,117 @@
         <h4 class="modal-title" id="myModalLabel">Formulario de Edicion, Usuario: <strong>{{nombre}}</strong></h4>
       </div>
       <div class="modal-body">
-	<div id="formEdicion">
-		<div id="logo"></div>
-        <div class="col-xs-12 col">
-        	<form id="registro" role="form" name="registro">
-        	<!-- nombre -->
-            	<div ng-class="{'has-error': registro.nombreU.$invalid, 'has-success': registro.nombreU.$valid}" class="form-group">
-		            <label id="labname" for="nombreU" class="control-label">Nombre</label>
-		             <span ng-show="registro.nombreU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		             <span ng-show="registro.nombreU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-		            <input type="text" name="nombreU" class="form-control" placeholder="{{nombre}}" value="{{nombre}}" ng-model=nombre ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
-		           	<p><small class="text-danger" ng-show="registro.nombreU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small></p>
-	            </div>
-	        <!--./nombre -->		            
-	            <div class="clearfix"></div>
-			<!-- email -->
-	            <div ng-class="{'has-error': registro.emailU.$invalid, 'has-success': registro.emailU.$valid}" class="form-group">	
-		            <label id="labmail" for="emailU" class="control-label">Email</label> 
-		            <span ng-show="registro.emailU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		            <span ng-show="registro.emailU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-		            <input type="email" name="emailU" class="form-control" placeholder={{email}} ng-model="email" required/>
-		            <small class="text-danger" ng-show="registro.emailU.$invalid">Email inválido.</small>
-	            </div>
-	        <!-- ./email -->
-	            <div class="clearfix"></div>
-			<!-- contraseña -->
-	            <div ng-class="{'has-error': registro.passU.$invalid, 'has-success': registro.passU.$valid}" class="form-group">
-		            <label id="labpass" for="passU" class="control-label">Contraseña</label>
-		            <span ng-show="registro.passU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		             <span ng-show="registro.passU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-		            <input type="text" name="passU" id="passU" class="form-control" placeholder={{pass}} ng-model="pass" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
-		            <small class="text-danger" ng-show="registro.passU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small>
-	            </div>
-	        <!-- ./contraseña -->
-	            <div class="clearfix"></div>
-	            
-            <!--USUARIO BASICO-->
-		    	<div ng-if="tipo == 1">
-		    	
-						<div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group"">
-				            <label id="labfec" for="fechaU" class="control-label">Fecha de Nacimiento</label>
-				            <span ng-show="registro.fechaU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-			                <span ng-show="registro.fechaU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            <input type="date" name="fechaU" id="fechaU" class="form-control" value="fecha_nac" ng-model="fecha_nac"/>
-				            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
+      <!-- formulario  -->
+			<div id="formEdicion">
+				<div id="logo"></div>
+		        <div class="col-xs-12 col">
+		        	<form id="registro" role="form" name="registro">
+		        	<!-- nombre -->
+		            	<div ng-class="{'has-error': registro.nombreU.$invalid, 'has-success': registro.nombreU.$valid}" class="form-group">
+				            <label id="labname" for="nombreU" class="control-label">Nombre</label>
+				             <span ng-show="registro.nombreU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				             <span ng-show="registro.nombreU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+				            <input type="text" name="nombreU" class="form-control" placeholder="{{nombre}}" ng-value="{{userData.nombre}}" ng-model="userData.nombre" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
+				           	<p><small class="text-danger" ng-show="registro.nombreU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small></p>
 			            </div>
-				            
-			            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group">
-				            <label id="labsexo" for="sexoU" class="control-label">Sexo</label>
-				            <span ng-show="registro.sexoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-			                <span ng-show="registro.sexoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            	<select id="sexoU" ng-model="sexo" name="sexoU" class="form-control">
-				            		<option ng-repeat="s in sexos" ng-value="{{s.sexo}}" ng-selected="'{{s.sexo}}' === '{{sexo}}'" >{{s.nombre}}</option>	            		
-				            	</select>
-				            <small class="text-danger" ng-show="registro.sexoU.$invalid">¿Eres hombre o mujer?</small>
+			        <!--./nombre -->		            
+			            <div class="clearfix"></div>
+					<!-- email -->
+			            <div ng-class="{'has-error': registro.emailU.$invalid, 'has-success': registro.emailU.$valid}" class="form-group">	
+				            <label id="labmail" for="emailU" class="control-label">Email</label> 
+				            <span ng-show="registro.emailU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				            <span ng-show="registro.emailU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+				            <input type="email" name="emailU" class="form-control" placeholder={{email}} ng-value="{{userData.email}}" ng-model="userData.email" required/>
+				            <small class="text-danger" ng-show="registro.emailU.$invalid">Email inválido.</small>
 			            </div>
-				</div>
-			<!-- ./USUARIO BASICO-->
-
-	   		<!--USUARIO ARTISTA-->			
-				<div ng-if="tipo == 2">
-						<div ng-class="{'has-error': registro.generoU.$invalid, 'has-success': registro.generoU.$valid}" class="form-group">
-				            <label id="labgenero" for="generoU" class="control-label">Género Musical</label>
-				            <span ng-show="registro.generoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-			            	<span ng-show="registro.generoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            	<select id="generoU" ng-model="userData.genero" name="generoU" class="form-control" ng-required="userData.tipo=='2'" ng-init="generos()">
-				            		<option ng-repeat="gen in generos" ng-value="{{gen.idGeneros}}" ng-selected="{{gen.idGeneros}} == {{genero}}" >{{gen.nombre}}</option>
-				            	</select>
-				            <small class="text-danger" ng-show="registro.generoU.$invalid">¿Qué tipo de música toca tu grupo?</small>
+			        <!-- ./email -->
+			            <div class="clearfix"></div>
+					<!-- contraseña -->
+			            <div ng-class="{'has-error': registro.passU.$invalid, 'has-success': registro.passU.$valid}" class="form-group">
+				            <label id="labpass" for="passU" class="control-label">Contraseña</label>
+				            <span ng-show="registro.passU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+				             <span ng-show="registro.passU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+				            <input type="text" name="passU" id="passU" class="form-control" placeholder={{password}} ng-value="{{password}}" ng-model="userData.password" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
+				            <small class="text-danger" ng-show="registro.passU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small>
 			            </div>
-				</div>
-			<!-- ./USUARIO ARTISTA-->
-				
-			<!--USUARIO SALA-->
-				<div ng-if="tipo == 3">
-						<div ng-class="{'has-error': registro.aforoU.$invalid, 'has-success': registro.aforoU.$valid}" class="form-group">
-				            <label id="labafo" for="aforoU" class="control-label">Aforo</label>
-				            <span ng-show="registro.aforoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-			             	<span ng-show="registro.aforoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            <input type="text" id="aforoU" ng-model="aforo" placeholder={{aforo}} name="aforoU" class="form-control" ng-pattern="/\d/g" ng-required="userData.tipo=='3'" />
-				            <small class="text-danger" ng-show="registro.aforoU.$invalid">Introduce el aforo de la sala que vas a registar.</small>
-			            </div>
-			            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group">
-				            <label id="labafo" for="poblacionU" class="control-label">Población</label>
-				            <span ng-show="registro.poblacionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-			            	<span ng-show="registro.poblacionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            <input type="text" id="poblacionU" ng-model="poblacion" placeholder={{poblacion}}  name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
-				            <small class="text-danger" ng-show="registro.poblacionU.$invalid">¿Dónde está la sala?.</small>
-			            </div>
-			            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group">
-				            <label id="labafo" for="direccionU" class="control-label">Dirección</label>
-				            <span ng-show="registro.direccionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-			                <span ng-show="registro.direccionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            <input type="text" id="direccionU" ng-model="direccion" placeholder={{direccion}} name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
-				            <small class="text-danger" ng-show="registro.direccionU.$invalid">¿En que dirección exacta?.</small>
-			            </div>
-				</div>
-			<!-- ./USUARIO SALA-->
-				
-				<div class="form-group text-center">
-	            	<button class="btn btn-info" value="Log in" ng-click="UpdateUsuario()" ng-disabled="registro.$pristine || registro.$invalid">Confirmar cambios</button>
-	        	</div>
-	        	
-		    </form>
-        </div>
-    </div>
-
+			        <!-- ./contraseña -->
+			            <div class="clearfix"></div>
+			            
+		            <!--USUARIO BASICO-->
+				    	<div ng-if="tipo == 1">
+				    	
+								<div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group"">
+						            <label id="labfec" for="fechaU" class="control-label">Fecha de Nacimiento</label>
+						            <span ng-show="registro.fechaU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+					                <span ng-show="registro.fechaU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+						            <input type="date" name="fechaU" id="fechaU" class="form-control" ng-value="userData.fecha_nac" ng-model="userData.fecha_nac"/>
+						            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
+					            </div>
+						            
+					            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group">
+						            <label id="labsexo" for="sexoU" class="control-label">Sexo</label>
+						            <span ng-show="registro.sexoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+					                <span ng-show="registro.sexoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+						            	<select id="sexoU"  name="sexoU" ng-model="userData.sexo" class="form-control">
+						            		<option ng-repeat="s in sexos"ng-value="{{userData.sexo}}" ng-selected="'{{s.sexo}}' === '{{userData.sexo}}'" >{{s.nombre}}</option>	            		
+						            	</select>
+						            <small class="text-danger" ng-show="registro.sexoU.$invalid">¿Eres hombre o mujer?</small>
+					            </div>
+						</div>
+					<!-- ./USUARIO BASICO-->
+		
+			   		<!--USUARIO ARTISTA-->			
+						<div ng-if="tipo == 2">
+								<div ng-class="{'has-error': registro.generoU.$invalid, 'has-success': registro.generoU.$valid}" class="form-group">
+						            <label id="labgenero" for="generoU" class="control-label">Género Musical</label>
+						            <span ng-show="registro.generoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+					            	<span ng-show="registro.generoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+						            	<select id="generoU" ng-model="userData.genero" name="generoU" class="form-control">
+						            		<option ng-repeat="gen in userData.generos" ng-value="{{gen.idGeneros}}" ng-selected="{{gen.idGeneros}} == {{userData.genero}}" >{{gen.nombre}}</option>
+						            	</select>
+						            <small class="text-danger" ng-show="registro.generoU.$invalid">¿Qué tipo de música toca tu grupo?</small>
+					            </div>
+						</div>
+					<!-- ./USUARIO ARTISTA-->
+						
+					<!--USUARIO SALA-->
+						<div ng-if="tipo == 3">
+								<div ng-class="{'has-error': registro.aforoU.$invalid, 'has-success': registro.aforoU.$valid}" class="form-group">
+						            <label id="labafo" for="aforoU" class="control-label">Aforo</label>
+						            <span ng-show="registro.aforoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+					             	<span ng-show="registro.aforoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+						            <input type="text" id="aforoU" ng-value="userData.aforo" ng-model="userData.aforo" placeholder={{aforo}} name="aforoU" class="form-control" ng-pattern="/\d/g" ng-required="userData.tipo=='3'" />
+						            <small class="text-danger" ng-show="registro.aforoU.$invalid">Introduce el aforo de la sala que vas a registar.</small>
+					            </div>
+					            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group">
+						            <label id="labafo" for="poblacionU" class="control-label">Población</label>
+						            <span ng-show="registro.poblacionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+					            	<span ng-show="registro.poblacionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+						            <input type="text" id="poblacionU" ng-value="userData.poblacion" ng-model="userData.poblacion" placeholder={{poblacion}}  name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
+						            <small class="text-danger" ng-show="registro.poblacionU.$invalid">¿Dónde está la sala?.</small>
+					            </div>
+					            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group">
+						            <label id="labafo" for="direccionU" class="control-label">Dirección</label>
+						            <span ng-show="registro.direccionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+					                <span ng-show="registro.direccionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+						            <input type="text" id="direccionU" ng-value="userData.direccion" ng-model="userData.direccion" placeholder={{direccion}} name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
+						            <small class="text-danger" ng-show="registro.direccionU.$invalid">¿En que dirección exacta?.</small>
+					            </div>
+						</div>
+					<!-- ./USUARIO SALA-->
+					<!-- hidden -->
+						<input type="hidden" name="Tipo_usuarios_idTipo_usuariosU" id="Tipo_usuarios_idTipo_usuariosU" ng-value="userData.Tipo_usuarios_idTipo_usuarios" />
+						<input type="hidden" name="idUsiarioU" id="idUsiarioU" ng-value="userData.idUsiario" />
+					<!-- ./hidden -->
+						
+						<div class="form-group text-center">
+			            	<button class="btn btn-info" value="Log in" ng-click="UpdateUsuario($event)" ng-disabled="registro.$pristine || registro.$invalid">Confirmar cambios</button>
+			        	</div>
+			        	
+				    </form>
+		        </div>
+		    </div>
+			<!-- ./formulario -->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
