--- a/wusick/app/views/partials/loginAdmin.html
+++ b/wusick/app/views/partials/loginAdmin.html
@@ -5,7 +5,7 @@
                 <form id="login" role="form" name ="login" class="min">
                   <div class="form-group">
                       <label id="labmail" for="nombre">Email</label>
-                      <input type="email" placeholder="Em@il" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Em@il'" ng-model="userData.email" id="nombre" name="nombre" class="form-control"/>
+                      <input type="email" placeholder="Em@il" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Em@il'" ng-model="userData.email" id="nombre" name="nombre" class="form-control" autofocus/>
                   </div>
                   <div class="clearfix"></div>
 
