--- a/wusick/app/views/partials/sidemenu.html
+++ b/wusick/app/views/partials/sidemenu.html
@@ -12,18 +12,21 @@
         <li class="" ng-show="usuario.Tipo_usuarios_idTipo_usuarios==1" >
             <a href="">Amigos</a>
                 <ul id="listaAmigos">
+                    <a href="/amigos" class="buscara">Buscar Amigos</a>
                     <li ng-repeat="amigoSide in amigosSide" ng-show="amigoSide.Tipo_usuarios_idTipo_usuarios==1">{{amigoSide.nombre}}</li>
                 </ul>
         </li>
         <li>
             <a href="">Artistas</a>
                 <ul id="listaArtistas">
+                    <a href="/artistas" class="buscara">Buscar Artistas</a>
                     <li ng-repeat="artista in artistasSide" ng-show="artista.Tipo_usuarios_idTipo_usuarios==2" >{{artista.nombre}}</li>
                 </ul>
         </li>
         <li >
             <a href="">Salas</a>
             <ul id="listaArtistas">
+                <a href="/salas" class="buscara">Buscar Salas</a>
                     <li ng-repeat="sala in salasSide" ng-show="sala.Tipo_usuarios_idTipo_usuarios==3" >{{sala.nombre}}</li>
                 </ul>
         </li>
