--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -37,7 +37,7 @@
                                      <a href="" ng-show="post.destinatario!=null">
                                         <strong class="text-info">  -->  {{post.destinatario}}</strong>
                                     </a>
-                                    <small class="text-right">{{post.fecha | date:'fullDate'}}</small>
+                                    <small class="text-right">{{post.fecha | date:'medium'}}</small>
                                 </div>
                                 <p>{{post.contenido}}</p>
                                 <p ng-show="post.img!='null'">
