--- a/wusick/app/views/partials/sidemenu.html
+++ b/wusick/app/views/partials/sidemenu.html
@@ -1,11 +1,10 @@
 <aside class="visible-desktop col-xs-3 row">
     <!-- search -->
-    <form class="form-search">
-        <div class="input-prepend">
-            <button type="submit" class="btn"></button>
-            <input type="text" class="search-query">
-        </div>
-    </form>
+    <div id="profile">
+        <img id="profile-img" src="" width="60" height="60">
+        <h4 id="profile-name" class="text-info"><small>{{usuario.nombre}}</small></h4></br>
+        <a href="" id="profile-edit" class="text-info "><small>Editar Perfil</small></a>
+    </div>
 
     <!-- menu -->
     <ul class="sideMenu">
