--- a/wusick/app/views/index.html
+++ b/wusick/app/views/index.html
@@ -57,9 +57,9 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-webstorage/angular-webstorage.js"></script>
-    <script src="https://code.angularjs.org/1.2.9/i18n/angular-locale_es-es.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+    <script type="text/javascript" src="https://code.angularjs.org/1.2.9/i18n/angular-locale_es-es.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
