--- a/wusick/app/views/partials/navbarMain.html
+++ b/wusick/app/views/partials/navbarMain.html
@@ -4,5 +4,5 @@
         <a ng-href="{{item.link}}">{{item.title}}</a>
     </li>
   </ul>
-  <h3 class="text-muted">Wusick</h3>
+  <a href="/main"><h3 class="text-muted">Wusick</h3></a>
 </div>
