--- a/wusick/app/styles/main.css
+++ b/wusick/app/styles/main.css
@@ -34,8 +34,8 @@ aside{
 }
 
 
-#navi ul.nav-tabs{
-border-bottom: 0px solid #ddd;
+#navi.nav-tabs{
+border-bottom: 0px solid #ddd !important;
 }
 
 #navi.nav-tabs > li {
@@ -43,11 +43,20 @@ float: left;
 margin-bottom: 0px;
 }
 
+#navi.nav-tabs > li.active {
+    background-color: #0066CC;
+    color:#FFF;
+}
 
 #navi.nav-tabs > li > a {
 line-height: 1.42857143;
 border: 1px solid transparent;
 border-radius: 0;
+margin-right: 0;
+}
+
+#navi.nav-tabs > li.active > a{
+    color: #FFF;
 }
 
 #navi.nav-tabs > li > a:hover {
@@ -94,12 +103,13 @@ border-radius:0;
 }
 
 #navi .nav-tabs > li > a {
-margin-right: 2px;
+margin-right: 0px;
 line-height: 1.42857143;
 border: 0;
 border-radius: 0;
 
 }
+
 
 
 /* Custom page footer */
@@ -543,7 +553,7 @@ aside .form-search input[type="text"]:focus {
 
 
 /* =================================
-                Amigos
+                Amigos, Artistas, Salas
 ==================================== */
 
 #amigosListaAmigos{
@@ -594,8 +604,25 @@ aside .form-search input[type="text"]:focus {
 }
 
 
+/* =================================
+                Perfil
+==================================== */
 
+#header-image{
+    margin-top: 70px;
+}
 
+#sum-perfil{
+bottom: 100px;
+float: right;
+color: #FFF;
+padding-right: 15px;
+position: relative;
+}
+
+#mainmid-perfil{
+    margin-top: -60px;
+}
 
 
 
