--- a/wusick/app/views/partials/salas.html
+++ b/wusick/app/views/partials/salas.html
@@ -41,7 +41,7 @@
           <tr ng-repeat="todoUsuario in todoUsuarios | orderBy:ordenSel | filter:buscar" ng-show="todoUsuario.Tipo_usuarios_idTipo_usuarios==3 && todoUsuario.nombre!=usuario.nombre">
             <td>{{todoUsuario.nombre}}</td>
             <td>{{todoUsuario.email}}</td>
-            <td>{{todoUsuario.fecha_alta | date:"fullDate" }}</td>
+            <td>{{todoUsuario.fecha_alta | date:"shortDate"}}</td>
             <td><button class="btn btn-info">Seguir Sala</button></td>
             
           </tr>
