--- a/wusick/app/views/partials/sidemenu.html
+++ b/wusick/app/views/partials/sidemenu.html
@@ -1,14 +1,14 @@
 <aside class="visible-desktop col-xs-3 row">
     <!-- search -->
     <div id="profile">
-        <img id="profile-img" src="" width="60" height="60">
+        <img id="profile-img" src="http://www.codeproject.com/KB/GDI-plus/ImageProcessing2/img.jpg" width="60" height="60">
         <h4 id="profile-name" class="text-info"><small>{{usuario.nombre}}</small></h4></br>
         <a href="" id="profile-edit" class="text-info "><small>Editar Perfil</small></a>
     </div>
 
     <!-- menu -->
     <ul class="sideMenu">
-        <li class="" ng-show="usuario.Tipo_usuarios_idTipo_usuarios==1" >
+        <li ng-show="usuario.Tipo_usuarios_idTipo_usuarios==1" >
             <a href="">Amigos</a>
                 <ul id="listaAmigos">
                     <a href="/amigos" class="buscara">Buscar Amigos</a>
