--- a/wusick/app/views/partials/loginAdmin.html
+++ b/wusick/app/views/partials/loginAdmin.html
@@ -1,5 +1,4 @@
-  <div id="loginpage" ng-init="alert('Ha entrado en area restringida!');">
-    <h1>LOGIN ADMINISTRACION</h1>
+  <div id="loginpage">
         <div class="col-xs-12">
                 <div class="clearfix"></div>
                 <form id="login" role="form" name ="login" class="min">
