--- a/wusick/app/views/partials/sidemenu.html
+++ b/wusick/app/views/partials/sidemenu.html
@@ -1,4 +1,4 @@
-<aside class="visible-desktop col-xs-3 row">
+<aside class="visible-desktop col-xs-12 col-sm-12 col-md-3 row">
     <!-- search -->
     <div id="profile">
         <img id="profile-img" src="http://www.codeproject.com/KB/GDI-plus/ImageProcessing2/img.jpg" width="60" height="60">
