--- a/wusick/app/styles/main.css
+++ b/wusick/app/styles/main.css
@@ -595,6 +595,9 @@ aside .form-search input[type="text"]:focus {
     display: block;
     width: 100%;
     height: 100%;
+
+font-size: 1.6em;
+font-weight: 100;
 }
 
 .cajaAmigo:hover{ 
